<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1" android:id="@+id/loginMainLayout"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:weightSum="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/WhiteSpace1"
                />

            <ImageView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/add_48"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Register User"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/WhiteSpace1"
                />
        </LinearLayout>


        <!--Input ID Area//-->
        <LinearLayout
            android:layout_marginTop="@dimen/login_input_area_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/WhiteSpace1"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/login_placehold_text"
                android:inputType="text"
                android:background="@drawable/group_top"
                android:ems="8"
                android:paddingTop="@dimen/login_text_top_bottom_padding"
                android:paddingBottom="@dimen/login_text_top_bottom_padding"
                android:paddingRight="@dimen/login_text_padding"
                android:paddingLeft="@dimen/login_text_padding"
                android:textCursorDrawable="@null"
                android:id="@+id/regIdText"
                android:layout_weight="6"
                android:hint="@string/RegId"
                android:textColorHint="@color/login_placehold_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/WhiteSpace1"
                />
        </LinearLayout>
            <!--Input PASS Area//-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_placehold_text"
                    android:inputType="text"
                    android:background="@drawable/group_bottom"
                    android:ems="8"
                    android:paddingTop="@dimen/login_text_top_bottom_padding"
                    android:paddingBottom="@dimen/login_text_top_bottom_padding"
                    android:paddingRight="@dimen/login_text_padding"
                    android:paddingLeft="@dimen/login_text_padding"
                    android:textCursorDrawable="@null"
                    android:id="@+id/regPassText" android:layout_weight="6"
                    android:hint="@string/RegPassword" android:textColorHint="@color/login_placehold_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
            </LinearLayout>

            <!--Input PASS Area//-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_placehold_text"
                    android:inputType="text"
                    android:background="@drawable/group_top"
                    android:ems="8"
                    android:paddingTop="@dimen/login_text_top_bottom_padding"
                    android:paddingBottom="@dimen/login_text_top_bottom_padding"
                    android:paddingRight="@dimen/login_text_padding"
                    android:paddingLeft="@dimen/login_text_padding"
                    android:textCursorDrawable="@null"
                    android:id="@+id/regNameText" android:layout_weight="6"
                    android:hint="@string/RegName" android:textColorHint="@color/login_placehold_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
            </LinearLayout>

            <!--Input PASS Area//-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_placehold_text"
                    android:inputType="text"
                    android:background="@drawable/group_row"
                    android:ems="8"
                    android:paddingTop="@dimen/login_text_top_bottom_padding"
                    android:paddingBottom="@dimen/login_text_top_bottom_padding"
                    android:paddingRight="@dimen/login_text_padding"
                    android:paddingLeft="@dimen/login_text_padding"
                    android:textCursorDrawable="@null"
                    android:id="@+id/regAddressText" android:layout_weight="6"
                    android:hint="@string/RegAddress" android:textColorHint="@color/login_placehold_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
            </LinearLayout>

            <!--Input PASS Area//-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_placehold_text"
                    android:inputType="text"
                    android:background="@drawable/group_row"
                    android:ems="8"
                    android:paddingTop="@dimen/login_text_top_bottom_padding"
                    android:paddingBottom="@dimen/login_text_top_bottom_padding"
                    android:paddingRight="@dimen/login_text_padding"
                    android:paddingLeft="@dimen/login_text_padding"
                    android:textCursorDrawable="@null"
                    android:id="@+id/regDobText" android:layout_weight="6"
                    android:onClick="showTimePickerDialog"
                    android:editable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"

                    android:hint="@string/RegDob" android:textColorHint="@color/login_placehold_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
            </LinearLayout>



            <!--Input PASS Area//-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_placehold_text"
                    android:background="@drawable/group_row"
                    android:ems="8"
                    android:paddingTop="@dimen/login_text_top_bottom_padding"
                    android:paddingBottom="@dimen/login_text_top_bottom_padding"
                    android:paddingRight="@dimen/login_text_padding"
                    android:paddingLeft="@dimen/login_text_padding"
                    android:textCursorDrawable="@null"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"
                    android:id="@+id/regMobileText" android:layout_weight="6"
                    android:hint="@string/RegContant" android:textColorHint="@color/login_placehold_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
            </LinearLayout>

            <!--Input PASS Area//-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_placehold_text"
                    android:background="@drawable/group_bottom"
                    android:ems="8"
                    android:paddingTop="@dimen/login_text_top_bottom_padding"
                    android:paddingBottom="@dimen/login_text_top_bottom_padding"
                    android:paddingRight="@dimen/login_text_padding"
                    android:paddingLeft="@dimen/login_text_padding"
                    android:textCursorDrawable="@null"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"
                    android:id="@+id/regEMobileText" android:layout_weight="6"
                    android:hint="@string/RegEContant" android:textColorHint="@color/login_placehold_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/WhiteSpace1"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="10px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left"
                    android:weightSum="10">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WhiteSpace1"
                        android:layout_weight="1.3"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:id="@+id/regMfRadio"
                        android:checkedButton="@+id/regMRadio"
                        android:orientation="horizontal"
                        android:weightSum="8.7"
                        >

                        <RadioButton
                            android:id="@+id/regMRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:buttonTint="@color/content_cate_color"
                            android:text="@string/RegMale"
                            android:textColor="@color/login_placehold_text"
                            android:theme="@style/radioBtnStyle"
                            />

                        <RadioButton
                            android:id="@+id/regFRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:buttonTint="@color/content_cate_color"
                            android:text="@string/RegFemale"
                            android:textColor="@color/login_placehold_text"
                            android:theme="@style/radioBtnStyle" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/login_input_area_bw_tx_bt_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <com.dd.CircularProgressButton
                    android:id="@+id/saveBtn"
                    android:layout_width="196dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    app:cpb_textComplete="@string/Logging"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/SignIn"
                    app:cpb_cornerRadius="48dp"
                    android:textAllCaps="false"  />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
